# merlindiary-client

./: constants.py  first_session.py  first_session_test.py  fuzzydict.py  get_last_lessons.py  login.py  main.py  marks.input2  marks.input3  miscellaneous.py  pyproject.toml  set_marks.py  tmp.py
