[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Igor Burenkov <isburenkov@gmail.com>"]
description = ""
name = "merlindiary-client"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
bs4 = "^0.0.1"
fuzzysearch = "^0.7.0"
fuzzywuzzy = "^0.18.0"
[tool.poetry.dev-dependencies]
